Reorganized folders, bug fixed htmlhidden, bootstrap first version

--- a/EixoX.Api/EixoX.Api.csproj
+++ b/EixoX.Api/EixoX.Api.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{685A63CD-B108-43E0-A6E8-EDFAD579A7E3}</ProjectGuid>
+    <ProjectGuid>{394FBA15-7EF1-4E74-8289-E9953B77477F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EixoX.Bootstrap</RootNamespace>
-    <AssemblyName>EixoX.Bootstrap</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>EixoX</RootNamespace>
+    <AssemblyName>EixoX.Api</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,21 +32,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Button.cs" />
-    <Compile Include="ButtonGroup.cs" />
-    <Compile Include="DropDown.cs" />
-    <Compile Include="Form.cs" />
-    <Compile Include="Image.cs" />
+    <Compile Include="IClassAcessor.cs" />
+    <Compile Include="IAspect.cs" />
+    <Compile Include="IAspectMember.cs" />
+    <Compile Include="Initializable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Table.cs" />
+    <Compile Include="Singleton.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
