--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Html\Controls\BootstrapPassword.cs" />
     <Compile Include="Html\Controls\BootstrapRadioGroup.cs" />
     <Compile Include="Html\Controls\BootstrapSingleline.cs" />
+    <Compile Include="Html\Controls\HtmlColorPicker.cs" />
     <Compile Include="Reflection\CompositeAnnotationAspect.cs" />
     <Compile Include="Reflection\CompositeAnnotationMember.cs" />
     <Compile Include="Data\ClassSelectMember.cs" />
@@ -236,6 +237,7 @@
     <Compile Include="UI\UIControlClassStorageChoices.cs" />
     <Compile Include="UI\UIControlEnumChoices.cs" />
     <Compile Include="UI\UIControlGroup.cs" />
+    <Compile Include="UI\UIControls\UIColorPicker.cs" />
     <Compile Include="UI\UIControls\UIHidden.cs" />
     <Compile Include="UI\UIPresenter.cs" />
     <Compile Include="UI\UIAspect.cs" />
