--- a/EixoX.Mathematica/EixoX.Mathematica.csproj
+++ b/EixoX.Mathematica/EixoX.Mathematica.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B0DA24B-2BD1-4EA9-8E0A-662C12B89EF9}</ProjectGuid>
+    <ProjectGuid>{F3311647-002F-4488-8677-5D7C3569DD19}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EixoX.Html.Bootstrap</RootNamespace>
-    <AssemblyName>EixoX.Html.Bootstrap</AssemblyName>
+    <RootNamespace>EixoX.Mathematica</RootNamespace>
+    <AssemblyName>EixoX.Mathematica</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -36,16 +36,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CellularAutomata\Automaton.cs" />
+    <Compile Include="CellularAutomata\ElementaryAutomaton.cs" />
+    <Compile Include="CellularAutomata\ElementaryLattice.cs" />
+    <Compile Include="CellularAutomata\ElementaryRule.cs" />
+    <Compile Include="CellularAutomata\ElementaryIntLattice.cs" />
+    <Compile Include="CellularAutomata\Lattice.cs" />
+    <Compile Include="Complex.cs" />
+    <Compile Include="Function.cs" />
+    <Compile Include="Histogram.cs" />
+    <Compile Include="IHypothesis.cs" />
+    <Compile Include="IMatrix.cs" />
+    <Compile Include="IntSample.cs" />
+    <Compile Include="Matrix.cs" />
+    <Compile Include="Matrix3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EixoX\EixoX.csproj">
-      <Project>{0a418683-14d0-433f-ba4d-c4919c8069a7}</Project>
-      <Name>EixoX</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
+    <Compile Include="R1.cs" />
+    <Compile Include="R1Constant.cs" />
+    <Compile Include="R1Polynomial.cs" />
+    <Compile Include="R1Sine.cs" />
+    <Compile Include="R1Term.cs" />
+    <Compile Include="Vector3.cs" />
+    <Compile Include="VectorD.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
