Added DatabaseIdentity generation

--- a/EixoX.RocketLauncher/EixoX.RocketLauncher.ConsoleApp/App.config
+++ b/EixoX.RocketLauncher/EixoX.RocketLauncher.ConsoleApp/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="DefaultConnectionString" value="Initial Catalog=DCFMUSP;Data Source=.\SQLEXPRESS;Integrated Security=SSPI;"/>
+    <add key="DefaultConnectionString" value="Initial Catalog=MyCollection;Data Source=ws-glamdev-02\SQLEXPRESS;Integrated Security=SSPI;"/>
   </appSettings>
 </configuration>
