--- a/EixoX.RocketLauncher/EixoX.RocketLauncher.ConsoleApp/App.config
+++ b/EixoX.RocketLauncher/EixoX.RocketLauncher.ConsoleApp/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="DefaultConnectionString" value="Initial Catalog=MyCollection;Data Source=ws-glamdev-02\SQLEXPRESS;Integrated Security=SSPI;"/>
+    <add key="DefaultConnectionString" value="Server=test.glambox.com.br;Database=Glambox.BRA;User Id=sa;Password=sa2005..."/>
   </appSettings>
 </configuration>
