Started GlobalizationFiles Generation

--- a/EixoX.RocketLauncher/EixoX.RocketLauncher/EixoX.RocketLauncher.csproj
+++ b/EixoX.RocketLauncher/EixoX.RocketLauncher/EixoX.RocketLauncher.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command\CommandNotFoundException.cs" />
+    <Compile Include="Command\GlobalizationFilesCommand.cs" />
+    <Compile Include="Command\SettingsBasedCommand.cs" />
     <Compile Include="DatabaseGathering\DatabaseCredentials.cs" />
     <Compile Include="Generators\ClassFile.cs" />
     <Compile Include="Command\ClassesFromDatabaseCommand.cs" />
