Capitalization bug on empty strings

--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -273,6 +273,7 @@
     </Content>
     <Content Include="Restrictions\RestrictionMessages.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup />
