--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -40,9 +40,9 @@
     <Compile Include="Collections\Dictionary.cs" />
     <Compile Include="Helpers\CharHelper.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
-    <Compile Include="Html\BootstrapClassSelectResult.cs" />
     <Compile Include="Html\BootstrapControl.cs" />
     <Compile Include="Html\BootstrapControlFactory.cs" />
+    <Compile Include="Html\BootstrapHelper.cs" />
     <Compile Include="Html\BootstrapPresenter.cs" />
     <Compile Include="Html\BootstrapPresenterControl.cs" />
     <Compile Include="Html\Controls\BootstrapCheckbox.cs" />
