--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Html\Controls\BootstrapFileUploader.cs" />
     <Compile Include="Html\Controls\HtmlFileUploader.cs" />
     <Compile Include="Html\Controls\HtmlColorPicker.cs" />
+    <Compile Include="LazyConstructor.cs" />
     <Compile Include="Pair.cs" />
     <Compile Include="Reflection\PrimitiveTypes.cs" />
     <Compile Include="Reflection\CompositeAnnotationAspect.cs" />
