--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -131,27 +131,27 @@
     <Compile Include="Restrictions\CreditCardNumber.cs" />
     <Compile Include="Reflection\SingleAnnotationAspect.cs" />
     <Compile Include="Reflection\SingleAnnotationAspectMember.cs" />
-    <Compile Include="Text\Adapters\ByteAdapter.cs" />
-    <Compile Include="Text\Adapters\ByteArrayAdapter.cs" />
+    <Compile Include="Text\Adapters\CharAdapter.cs" />
     <Compile Include="Text\Adapters\DateTimeAdapter.cs" />
-    <Compile Include="Text\Adapters\DateYmdAdapter.cs" />
-    <Compile Include="Text\Adapters\DecimalAdapter.cs" />
-    <Compile Include="Text\DelimitedTextTableAttribute.cs" />
-    <Compile Include="Text\Adapters\DoubleAdapter.cs" />
-    <Compile Include="Text\Adapters\FloatAdapter.cs" />
+    <Compile Include="Text\Adapters\EnumAdapter.cs" />
     <Compile Include="Text\Adapters\GuidAdapter.cs" />
-    <Compile Include="Text\Adapters\ImageAdapter.cs" />
-    <Compile Include="Text\Adapters\Int16Adapter.cs" />
-    <Compile Include="Text\Adapters\Int32Adapter.cs" />
-    <Compile Include="Text\Adapters\Int64Adapter.cs" />
-    <Compile Include="Text\Adapters\SByteAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\ByteAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\SByteAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\DecimalAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\FloatAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\DoubleAdapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\UInt16Adapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\UInt32Adapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\UInt64Adapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\Int16Adapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\Int64Adapter.cs" />
+    <Compile Include="Text\Adapters\Numeric\Int32Adapter.cs" />
+    <Compile Include="Text\Adapters\NumericAdapter.cs" />
+    <Compile Include="Text\Adapters\StringAdapter.cs" />
     <Compile Include="Text\Adapters\TextAdapter.cs" />
-    <Compile Include="Text\Adapters\AbstractTextAdapter.cs" />
-    <Compile Include="Text\Adapters\TextAdapters.cs" />
-    <Compile Include="Text\Adapters\TimespanAdapter.cs" />
-    <Compile Include="Text\Adapters\UInt16Adapter.cs" />
-    <Compile Include="Text\Adapters\UInt32Adapter.cs" />
-    <Compile Include="Text\Adapters\UInt64Adapter.cs" />
+    <Compile Include="Text\Adapters\TextAdapterBase.cs" />
+    <Compile Include="Text\Adapters\TimeSpanAdapter.cs" />
+    <Compile Include="Text\DelimitedTextTableAttribute.cs" />
     <Compile Include="Data\ClassStorage.cs" />
     <Compile Include="Collections\Tree.cs" />
     <Compile Include="Collections\TreeNode.cs" />
@@ -238,6 +238,7 @@
     <Compile Include="Text\FixedLengthColumnAttribute.cs" />
     <Compile Include="Text\FixedLengthTableAttribute.cs" />
     <Compile Include="Text\FixedLengthAspectMember.cs" />
+    <Compile Include="Text\Adapters\TextAdapters.cs" />
     <Compile Include="Text\TextColumn.cs" />
     <Compile Include="Text\TextColumnSchema.cs" />
     <Compile Include="Text\TextDataReader.cs" />
@@ -269,6 +270,11 @@
     <Compile Include="UI\UIControls\UISingleline.cs" />
     <Compile Include="Xml\XmlAspect.cs" />
     <Compile Include="Xml\XmlAspectMember.cs" />
+    <Compile Include="Xml\XmlAspectMemberCDATA.cs" />
+    <Compile Include="Xml\XmlAspectMemberComposite.cs" />
+    <Compile Include="Xml\XmlAspectMemberList.cs" />
+    <Compile Include="Xml\XmlAspectMemberAttribute.cs" />
+    <Compile Include="Xml\XmlAspectMemberText.cs" />
     <Compile Include="Xml\XmlType.cs" />
     <Compile Include="Xml\XmlAttribute.cs" />
   </ItemGroup>
