Text adapters revisited

--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -37,6 +37,44 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\AnsiCharAdapter.cs" />
+    <Compile Include="Adapters\AnsiStringAdapter.cs" />
+    <Compile Include="Adapters\AnsiStringFixedLengthAdapter.cs" />
+    <Compile Include="Adapters\AnsiStringMaxLengthAdapter.cs" />
+    <Compile Include="Adapters\BinaryAdapter.cs" />
+    <Compile Include="Adapters\BooleanAdapter.cs" />
+    <Compile Include="Adapters\ByteAdapter.cs" />
+    <Compile Include="Adapters\CharAdapter.cs" />
+    <Compile Include="Adapters\CompositeAdapter.cs" />
+    <Compile Include="Adapters\CurrencyAdapter.cs" />
+    <Compile Include="Adapters\DataTime2Adapter.cs" />
+    <Compile Include="Adapters\DateAdapter.cs" />
+    <Compile Include="Adapters\DateTimeAdapter.cs" />
+    <Compile Include="Adapters\DateTimeOffsetAdapter.cs" />
+    <Compile Include="Adapters\DecimalAdapter.cs" />
+    <Compile Include="Adapters\DoubleAdapter.cs" />
+    <Compile Include="Adapters\GuidAdapter.cs" />
+    <Compile Include="Adapters\Int16Adapter.cs" />
+    <Compile Include="Adapters\Int32Adapter.cs" />
+    <Compile Include="Adapters\Int64Adapter.cs" />
+    <Compile Include="Adapters\ObjectAdapter.cs" />
+    <Compile Include="Adapters\SimpleAdapter.cs" />
+    <Compile Include="Adapters\SByteAdapter.cs" />
+    <Compile Include="Adapters\SimpleAdapterBase.cs" />
+    <Compile Include="Adapters\SimpleAdapters.cs" />
+    <Compile Include="Adapters\SingleAdapter.cs" />
+    <Compile Include="Adapters\StringAdapter.cs" />
+    <Compile Include="Adapters\StringFixedLengthAdapter.cs" />
+    <Compile Include="Adapters\StringMaxLengthAdapter.cs" />
+    <Compile Include="Adapters\TextAdapter.cs" />
+    <Compile Include="Adapters\TimeAdapter.cs" />
+    <Compile Include="Adapters\TimeSpanAdapter.cs" />
+    <Compile Include="Adapters\UInt16Adapter.cs" />
+    <Compile Include="Adapters\UInt32Adapter.cs" />
+    <Compile Include="Adapters\UInt64Adapter.cs" />
+    <Compile Include="Adapters\VarNumericAdapter.cs" />
+    <Compile Include="Adapters\XmlDocumentStringAdapter.cs" />
+    <Compile Include="Adapters\XmlElementStringAdapter.cs" />
     <Compile Include="Base36.cs" />
     <Compile Include="Collections\Dictionary.cs" />
     <Compile Include="Helpers\CharHelper.cs" />
@@ -132,26 +170,6 @@
     <Compile Include="Restrictions\CreditCardNumber.cs" />
     <Compile Include="Reflection\SingleAnnotationAspect.cs" />
     <Compile Include="Reflection\SingleAnnotationAspectMember.cs" />
-    <Compile Include="Text\Adapters\CharAdapter.cs" />
-    <Compile Include="Text\Adapters\DateTimeAdapter.cs" />
-    <Compile Include="Text\Adapters\EnumAdapter.cs" />
-    <Compile Include="Text\Adapters\GuidAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\ByteAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\SByteAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\DecimalAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\FloatAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\DoubleAdapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\UInt16Adapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\UInt32Adapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\UInt64Adapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\Int16Adapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\Int64Adapter.cs" />
-    <Compile Include="Text\Adapters\Numeric\Int32Adapter.cs" />
-    <Compile Include="Text\Adapters\NumericAdapter.cs" />
-    <Compile Include="Text\Adapters\StringAdapter.cs" />
-    <Compile Include="Text\Adapters\TextAdapter.cs" />
-    <Compile Include="Text\Adapters\TextAdapterBase.cs" />
-    <Compile Include="Text\Adapters\TimeSpanAdapter.cs" />
     <Compile Include="Text\DelimitedTextTableAttribute.cs" />
     <Compile Include="Data\ClassStorage.cs" />
     <Compile Include="Collections\Tree.cs" />
@@ -239,7 +257,6 @@
     <Compile Include="Text\FixedLengthColumnAttribute.cs" />
     <Compile Include="Text\FixedLengthTableAttribute.cs" />
     <Compile Include="Text\FixedLengthAspectMember.cs" />
-    <Compile Include="Text\Adapters\TextAdapters.cs" />
     <Compile Include="Text\TextColumn.cs" />
     <Compile Include="Text\TextColumnSchema.cs" />
     <Compile Include="Text\TextDataReader.cs" />
