--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Text\TextDataReader.cs" />
     <Compile Include="Helpers\ValidationHelper.cs" />
     <Compile Include="UI\UIControl.cs" />
+    <Compile Include="UI\UIControlArrayChoices.cs" />
     <Compile Include="UI\UIControlChoices.cs" />
     <Compile Include="UI\UIControlClassStorageChoices.cs" />
     <Compile Include="UI\UIControlEnumChoices.cs" />
