--- a/EixoX/EixoX.csproj
+++ b/EixoX/EixoX.csproj
@@ -77,7 +77,9 @@
     <Compile Include="Adapters\XmlElementStringAdapter.cs" />
     <Compile Include="Base36.cs" />
     <Compile Include="Collections\Dictionary.cs" />
+    <Compile Include="EmailTemplate.cs" />
     <Compile Include="Helpers\CharHelper.cs" />
+    <Compile Include="Helpers\EnumerationHelper.cs" />
     <Compile Include="Helpers\RandomHelper.cs" />
     <Compile Include="Helpers\UrlPathHelper.cs" />
     <Compile Include="Html\BootstrapControl.cs" />
@@ -262,6 +264,7 @@
     <Compile Include="Text\TextColumnSchema.cs" />
     <Compile Include="Text\TextDataReader.cs" />
     <Compile Include="Helpers\ValidationHelper.cs" />
+    <Compile Include="Text\Tokenizer.cs" />
     <Compile Include="UI\UIControl.cs" />
     <Compile Include="UI\UIControlChoices.cs" />
     <Compile Include="UI\UIControlClassStorageChoices.cs" />
