--- a/EixoX.Extensions/EixoX.Extensions.csproj
+++ b/EixoX.Extensions/EixoX.Extensions.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="TextWriterExtensions.cs" />
     <Compile Include="XmlExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
